wip, add static docs site

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,12 @@
 SSL_DOMAIN_NAME=yourdomain.dyndns.org
 SSL_EMAIL=you@here.com
 
+GOOGLE_GEMINI_API_KEY=
+
+OPENAI_CHATGPT_API_KEY=
+
+OPENAI_WHISPER_API_KEY=
+
+ANTHROPIC_API_KEY=
+
+PICOVOICE_API_KEY=
