added a few files and notes to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,6 @@ tts_models/
 whisper-websocket-streamer/__pycache__/
 .env
 
-Notes.md
+Notes/Notes.md
+Notes/My-docker-compose.yml
+Notes/my-Dockerfile
